# flakeheaven

./: .gitignore  .pre-commit-hooks.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bumpversion.yml  ci.yaml  publish.yml
docs/: conf.py  config.md  formatters.md  ide.md  index.md  parsers.md  plugins.md  troubleshooting.md
docs/commands/: baseline.md  code.md  codes.md  config.md  dropqa.md  lint.md  missed.md
docs/templates/: toc.rst_t
flakeheaven/: _cli.py  _constants.py  _version.py
flakeheaven/_logic/: __init__.py  _baseline.py  _colors.py  _config.py  _discover.py  _extractors.py  _plugin.py  _snapshot.py
flakeheaven/_patched/: __init__.py  _app.py  _checkers.py  _plugins.py  _processor.py  _style_guide.py  _violation.py
flakeheaven/commands/: __init__.py  _baseline.py  _code.py  _config.py  _lint.py  _missed.py  _plugins.py  _version.py
flakeheaven/formatters/: _baseline.py  _colored.py  _gitlab.py  _grouped.py
flakeheaven/plugins/: _pylint.py
scripts/: docs-build  export-reqs
tests/: test_cli.py
tests/test_commands/: test_config.py
tests/test_logic/: test_config.py  test_extractors.py  test_plugin.py  test_snapshot.py
tests/test_parsers/: test_jupyter.py  test_main.py  test_markdown.py  test_rst.py  test_yaml.py
tests/test_patched/: test_app.py  test_checkers.py
tests/test_plugins/: test_pylint.py
